--- a/Beca.AgendaBBDD/frmAgenda.resx
+++ b/Beca.AgendaBBDD/frmAgenda.resx
@@ -57,4 +57,29 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAAMMOAADDDgAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAA4AAABMAAAAgwAAAIsAAABhAAAAHQAAAAUAAABWAAAAjAAAAIMAAABMAAAADgAA
+        AAAAAAAAAAAAAAAAACkAAACtAAAA9QAAAP8AAAD/AAAA/AAAAM4AAABRAAAAbQAAAPYAAAD/AAAA9QAA
+        AK0AAAApAAAAAAAAACIAAADCAAAA/wAAAMUAAAB3AAAAawAAAKUAAAD1AAAA6QAAAFAAAABQAAAAeQAA
+        AMUAAAD/AAAAwgAAACIAAACSAAAA/wAAAKgAAAAWAAAAAAAAAA0AAAA6AAAAcwAAAPoAAAC/AAAADwAA
+        AAAAAAAWAAAAqAAAAP8AAACSAAAA5QAAAOwAAAAzAAAAAAAAAAAAAAA7AAAA2QAAAEkAAAC7AAAA9QAA
+        ADoAAAAAAAAAAAAAADMAAADsAAAA5QAAAP8AAADSAAAAEwAAAAAAAAAAAAAAUgAAAP8AAAB1AAAAkAAA
+        AP8AAABSAAAAAAAAAAAAAAATAAAA0gAAAP8AAADyAAAA4QAAACIAAAAAAAAAAAAAAEYAAADwAAAAWwAA
+        AKcAAAD7AAAARQAAAAAAAAAAAAAAIgAAAOEAAADyAAAAswAAAP8AAAB7AAAAAwAAAAAAAAAbAAAAZwAA
+        AE8AAADrAAAA1wAAABwAAAAAAAAAAwAAAHwAAAD/AAAAswAAAEEAAADjAAAA8gAAAIkAAAA2AAAALQAA
+        AGUAAADZAAAA+wAAAHIAAAAeAAAANwAAAIkAAADyAAAA4wAAAEEAAAABAAAAVgAAAOAAAAD/AAAA9AAA
+        APAAAAD+AAAA8wAAAIgAAABPAAAA2QAAAPYAAAD/AAAA4AAAAFYAAAABAAAAAAAAAAEAAAAtAAAAhQAA
+        ALgAAAC/AAAAmgAAAEcAAAANAAAAdQAAAMEAAAC4AAAAhQAAAC0AAAABAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAGAAAACAAAAAQAAABfAAAAWgAAAAMAAAAIAAAABwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAMAAABoAAAA8QAAAO0AAABdAAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAABAAAAA7QAAAP8AAAD/AAAA5wAAADUAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAASwAAAPUAAAD9AAAA/QAAAPEAAABAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAsAAABoAAAAdQAAAHgAAABjAAAACAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAwAMAAIABAAAAAAAACBAAABgYAAAYGAAAGBgAAAgQAAAAAAAAAAAAAIABAADgBwAA+B8AAPgf
+        AAD4HwAA+B8AAA==
+</value>
+  </data>
 </root>
